--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.zhengyuelaii.desensitize</groupId>
-  <artifactId>easy-desensitize-core</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>easy-desensitize-core</name>
-  <description>The core logic of Easy Desensitize. Provides lightweight annotations, extensible masking strategies, and high-performance data desensitization algorithms for Java.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.github.zhengyuelaii.desensitize</groupId>
+	<artifactId>easy-desensitize-core</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>easy-desensitize-core</name>
+	<description>The core logic of Easy Desensitize. Provides lightweight
+		annotations, extensible masking strategies, and high-performance data
+		desensitization algorithms for Java.</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.0</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
