fix: 字符集错误

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
 	<description>The core logic of Easy Desensitize. Provides lightweight
 		annotations, extensible masking strategies, and high-performance data
 		desensitization algorithms for Java.</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -17,4 +24,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 </project>
