--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,31 @@
 	<description>The core logic of Easy Desensitize. Provides lightweight
 		annotations, extensible masking strategies, and high-performance data
 		desensitization algorithms for Java.</description>
+	<url>https://github.com/zhengyuelaii/easy-desensitize-core</url>
+
+	<scm>
+		<connection>scm:git:https://github.com/zhengyuelaii/easy-desensitize-core.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:zhengyuelaii/easy-desensitize-core.git</developerConnection>
+		<url>https://github.com/zhengyuelaii/easy-desensitize-core</url>
+		<tag>HEAD</tag>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>zhengyuelaii</id>
+			<name>Zheng Yuelai</name>
+			<email>zhengyuelaii@foxmail.com</email>
+			<url>https://github.com/zhengyuelaii</url>
+		</developer>
+	</developers>
 
 	<properties>
+		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 	</properties>
 
 	<dependencies>
@@ -48,7 +66,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 			</plugin>
-
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -67,6 +84,24 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.6.3</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>3.1.0</version>
 			</plugin>
 		</plugins>
 	</build>
